  Ignored exceptions now named ignored
  ConnectionPoolMonitor/Panel, renamed some fields and methods
  ServerMonitor/Panel, renamed some methods
  ValueMapImpl.hashCode(), minor refactoring
  ValueChangeMapImpl.setAs() bug fixed, setAs(this) simply cleared the map, test added
  DefaultEntityModel.bindEvents() revoked usage of invokeLater() when initializing the detail models (see changelog line 2599)
  Util.parseConfigurationFile() overloaded with a filename parameter
  Util.ADDITIONAL_CONFIGURATION_FILES property added
  Util.parseConfigurationFile() uses the above to discover additional configuration files to parse
  Util.parseConfigurationFile() now searches under user.dir/filename if the file is not found on the classpath
  UtilTest.parseConfigurationFile() added
  DefaultEntityComboBoxModel.foreignKeyFilterCriteria now includes items which have null for the relevant foreign key value
  DefaultEntityComboBoxModelTest, refactored a bit due to the above
  Images, unused field removed
  Util.getGetMethod(), getSetMethod() added, (refactored from AbstractBeanValueLink)
  AbstractBeanValueLinks uses the above
  EntitUtil.EntityBeanMapper added, tested
  @Override annotation added on interface implementations
  Sonar run
  EntityUtilTest, minor improvements in toBean() and toEntity() tests
  WebStartServerTest added
  webserver.jar library updated
  WebStartServer, changed according to updated library version, removed main
  ServerUtil, added logging
  PropertyImpl, minor refactoring
  Unit test cleanup and refactoring
  WebStartServerTest, gives the server a moment to start
0.6.5
  TextInputPanel, added null check to constructor
  DateInputPanel, enabledState now linked to input field as well as button
  Some minor unit test improvements/refactorings
  DefaultApplicationModel, constructor performs null check on connectionProvider
  EntityApplicationModel.login(user) throws IllegalArgumentException if user is null